fix header section layout issues and cart button function

--- a/src/style.css
+++ b/src/style.css
@@ -317,12 +317,7 @@ body{
 .nav-link:hover, .nav-link:focus-visible{
    
    background-color: var(--accent-color);
-   border: 1px solid var(--accent-color);
-   border-radius: 4rem;
-   -webkit-border-radius: 4rem;
-   -moz-border-radius: 4rem;
-   -ms-border-radius: 4rem;
-   -o-border-radius: 4rem;
+ 
    color: var(--white-color);
 }
 .header-right--div .fa-bag-shopping:hover{
@@ -332,118 +327,139 @@ body{
       }
 
 /***** Navbar Section *****/
-.section-header{
-  width: 100%;
+.section-header .grid-three--cols{
+  grid-template-columns: auto 1fr 1fr;
 }
-
 .navbar{
-  background-color: white;
+  display: flex;
+   align-items: center;
+   gap: 2rem;
+   
+}
+.menu-toggle {
+  display: none;
+  border: none;
+  outline: none;
+  font-size: 2rem;
+  background-color: transparent;
+}
+.nav-menu {
+  width: 100%;
+  height: 100%;
+  padding: 0 1rem;
+  background-color: var(--white-color);
+  display: flex;
+  align-items: center;
+  justify-content: center;
   border-radius: 4rem;
   -webkit-border-radius: 4rem;
   -moz-border-radius: 4rem;
   -ms-border-radius: 4rem;
   -o-border-radius: 4rem;
+  & ul{
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 1rem;
+  text-transform: capitalize;
+    
+  & a{
+    padding: 0.3rem 0.7rem;
+    border: none;
+    outline: none;
+    border-radius: 4rem;
+    -webkit-border-radius: 4rem;
+    -moz-border-radius: 4rem;
+    -ms-border-radius: 4rem;
+     -o-border-radius: 4rem;
+
+
+
+
+
+
+
+
+
+
+
+  }
+   }  
+}
+.header-center--div{
   display: flex;
   align-items: center;
   justify-content: center;
-  & ul{
-    padding: 0.5rem 2.4rem;
-    display: flex;
-    align-items: center;
-    gap: 2rem;
-    
-   
-    }
-    & .nav-link{
-      padding: 0.5rem 0.5rem;
-      font-size: 1.7rem;
-      text-align: center;
-      outline: none;
-      border: none;
-      text-transform: capitalize;
-      white-space: nowrap;
-      transition: all 0.1s ease;
-      -webkit-transition: all 0.1s ease;
-      -moz-transition: all 0.1s ease;
-      -ms-transition: all 0.1s ease;
-      -o-transition: all 0.1s ease;
 }
-  }
+.logo-text{
+  font-size: 4.3rem;
+  text-align: center;
+}
+.header-right--div{
+  display: flex;
+  align-items: center;
+  gap: 3rem;
 
-  .header-center--div .logo-text{
-    font-size: 4rem;
+  
+}
+.search-div{
+  background-color: white;
+  padding: 0.5rem 0.8rem;
+  border-radius: 4rem;
+  
+  -webkit-border-radius: 4rem;
+  -moz-border-radius: 4rem;
+  -ms-border-radius: 4rem;
+  -o-border-radius: 4rem;
+   & input{
+    border: none;
+    outline: none;
+
+  }
+  & .search-button{
+    border-radius: 50%;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+    background-color: var(--accent-color);
     text-align: center;
-    font-family: 'Noto Serif', sans-serif;
-    font-weight: 400;
-  }
-  .header-right--div{
-    display: flex;
-    align-items: center;
-    gap: 1.6rem;
+    outline: none;
+    border: none;
+}
+  & .fa-magnifying-glass{
+    text-align: center;
+    font-size: 1.6rem;
+    cursor: pointer;
+    padding: 1rem;
 
-     & .fa-bag-shopping{
-      font-size: 1.9rem;
+    
+    
+}
+}
+.cart-homepage--btn{
+   & .fa-bag-shopping{
+    font-size: 2rem;
+    padding: 1rem 0.3rem;
+
+    &:hover{
       background-color: transparent;
-      padding: 1.4rem 1.5rem;
-      border-radius: 50%;
-      -webkit-border-radius: 50%;
-      -moz-border-radius: 50%;
-      -ms-border-radius: 50%;
-      -o-border-radius: 50%;
-      cursor: pointer;
-      transition: all 0.2s ease;
-      -webkit-transition: all 0.2s ease;
-      -moz-transition: all 0.2s ease;
-      -ms-transition: all 0.2s ease;
-      -o-transition: all 0.2s ease;
-
-      
     }
-    
+   }
 
-    & .search-div{
-    
-      background-color: var(--white-color);
-      padding: 0.6rem 1rem;
-      border-radius: 2rem;
-      -webkit-border-radius: 2rem;
-      -moz-border-radius: 2rem;
-      -ms-border-radius: 2rem;
-      -o-border-radius: 2rem;
+   & #cart-count{
+    font-size: 1.7rem;
+    margin-left: -3.5px;
+    padding-right: 0.4rem;
+   }
 
-      & form{
-        display: flex;
-      }
-      & input
-      {
-        font-size: 1.5rem;
-       
-        border: none;
-        background-color: transparent;
-        outline: none;
-        padding: 0 3rem 0 0;
-
-        &::placeholder{
-          font-size: 1.5rem;
-        }
-      }
-      & .fa-magnifying-glass{
-        background-color: var(--accent-color);
-        padding: 1rem 1.1rem;
-        border-radius: 50%;
-        -webkit-border-radius: 50%;
-        -moz-border-radius: 50%;
-        -ms-border-radius: 50%;
-        -o-border-radius: 50%;
-        cursor: pointer;
-      }
-      
-    }
-  }
+   &:hover{
+    background-color: transparent;
+   }
+}
 
 
-
-
+  
 /***** End Navbar Section *****/
 /***** Hero Section *****/ 
 .section-hero .container{
@@ -1053,9 +1069,8 @@ body{
       gap: 1rem;
    }
    .hero-image{
-    display: flex;
-    justify-content: center;
-    align-items: stretch;
+    display: absolute;
+    
     height: 70rem;
     order: 1;
    }
@@ -1067,11 +1082,24 @@ body{
     
 
    }
-   .navbar ul{
-    margin: 0rem -20rem;
-   }
-   .section-about--content .grid{
-    grid-template-columns: repeat(1, 1fr);
-   }
-   
+  
+  .navbar{
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  .menu-toggle{
+    display: block;
+    margin-bottom: 1rem;
+  }
+  .nav-menu{
+    width: auto;
+    display: none;
+    width: 100%;
+    flex-direction: column;
+    gap: 1rem;
+  }
+  .nav-menu.active{
+    display: flex;
+  }
 }
